правка раздела про сервисы

--- a/auto.tex
+++ b/auto.tex
@@ -1,15 +1,15 @@
-{\bf{\SetMySection}Автомобильные телекоммуникационные сервисы.} Новые направления развития информационных услуг. Описание сервисов в мобильных mesh-сетях. 
-Перспективные направления предоставления информационных услуг базируются на облачно--ориентированных системах. 
+{\bf{\SetMySection}Автомобильные телекоммуникационные сервисы.} 
+Перспективные направления предоставления информационных услуг в автомобильных mesh-сетях базируются на облачно--ориентированных системах. 
 Примером таких систем может служить SYNC\cite{Ford.co.uk}, которая используется компанией ФОРД.
 
 
-Водитель может являтся потребителем индивидуальных услуг в облачной среде, предоставляющей следующие возможности:
+Водители и пассажиры автомобилей становятся потребителями индивидуальных сервисов, предоставляемых облачной средой, в частности:
 
 \begin{enumerate}
 
 \item Мониторинг технического состояния автомобилей и сокращение числа обращений в сервисные центры;
 
-\item упрощение финансовых расчетов клиентов компании при эксплуатации автомобиля;
+\item упрощение финансовых расчётов клиентов компании при эксплуатации автомобиля;
 
 \item комплексное решение эксплуатационных и транспортных задач;
 
@@ -19,7 +19,7 @@
 
 \end{enumerate}
 
-Реализация этих возможностей создает повышенные удобства водителям и пассажирам автомобилей.
+Реализация этих возможностей создаёт дополнительные удобства водителям и пассажирам автомобилей.
 
 Новые возможности реализуются в среде облачных вычислений с использованием беспроводного подключения встроенного оборудования к облачной среде.
 
@@ -56,7 +56,7 @@
 \begin{itemize}
 
 \item[$-$] Сообщение о погодных условиях и состоянии дорожного покрытия. 
-В данном случае в облако и напрямую водителям, передаются данные о температуре, влажности и давлении --- эти данные собираются с датчиков бортовой системы.
+В данном случае в облачную среду (облако) и напрямую водителям, передаются данные о температуре, влажности и давлении --- эти данные собираются с датчиков бортовой системы.
 
 \item[$-$] Оперативные изменения в транспортной сети. Из облака, передаются оперативные данные о: перекрытии дорог, изменении числа полос и рядности движения, изменении скоростного режима, неработающих светофоры, пробки, ДТП. Источником этих данных являются дорожные службы, службы типа <<Яндекс.Пробки>> и непосредственно водители. 
 
@@ -70,11 +70,11 @@
 
 \item[$-$] Уточнение данных о дорожной обстановке в центре управления транспортными средствами. Данные в центр обслуживания: голосовой канал связи с центром обслуживания и реагирования, будет предназначаться для помощи водителю на дорогах.
  
-\item[$-$] Передача сообщений об аварийных ситуациях. Передаются координаты и код, сообщающий о категории аварийной ситуации. По возможности передается набор видеоданных, принимающей стораной этих данных является облако и все водители в ближайшем радиусе.
+\item[$-$] Передача сообщений об аварийных ситуациях. Передаются координаты и код, сообщающий о категории аварийной ситуации. По возможности передается набор видеоданных, принимающей стороной этих данных является облако и все водители в ближайшем радиусе.
 
-\item[$-$] Автоматическая оплата услуг (дороги, парковки, топливо).
+\item[$-$] Автоматическая оплата услуг (дорог, парковок, топлива).
 
-\item[$-$] Отправка сообщений <<SOS>> автомобилям в определенном радиусе: <<кончился бензин>>, <<сел аккумулятор>>, <<спустило колесо, нет запасного>>, <<застрял, помогите выехать>>. Данные передаются напрямую другим автомобилям, либо транзитом через облако другим автомобилям, а также в службы помощи на дорогах: радиус рассылки сообщений необходимо формировать динамически на основе местоположения(город, отдаленный населенный пункт).
+\item[$-$] Отправка сообщений <<SOS>> автомобилям в определенном радиусе: <<кончился бензин>>, <<сел аккумулятор>>, <<спустило колесо, нет запасного>>, <<застрял, помогите выехать>>. Данные передаются напрямую другим автомобилям, либо транзитом через облако другим автомобилям, а также в службы помощи на дорогах: радиус рассылки сообщений необходимо формировать динамически на основе местоположения (город, отдаленный населенный пункт).
 
 \item[$-$] Срабатывание датчиков охранного комплекса и/или угон автомобиля. Отправка сведений всеми доступными способами с приложением фото--, видео-- и аудиоданных с внешних/внутренних камер и микрофонов.
 
