Некоторые ссылки на литературу

--- a/implementation.tex
+++ b/implementation.tex
@@ -1,14 +1,14 @@
-{\bf{\SetMySection} Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования является имитационное моделирование работы сети в среде ns-3 (дискретно-событийный симулятор телекоммуникационных систем[2]). %поправить ссылки
+{\bf{\SetMySection} Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования является имитационное моделирование работы сети в среде ns-3 (дискретно-событийный симулятор телекоммуникационных систем\cite{Nsnam.org}).
  
-Симулятор ns-3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns--3 открыты для исследования, модификации и использования и доступны на сайте проекта[2]. В качестве встроенного языка описания моделей используются: C++ и Python. %поправить ссылки
+Симулятор ns-3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns--3 открыты для исследования, модификации и использования и доступны на сайте проекта\cite{Nsnam.org}. В качестве встроенного языка описания моделей используются: C++ и Python.
 
 В ns-3 разработаны модели как проводных, так и беспроводных сетей, позволяющие проводить моделирование смешанных сетей с топологиями различной сложности. Особый интерес в рамках данной работы представляет реализация mesh сетей на основе стека протоколов 802.11s.
 
-Для построения транспортной сети и моделирования движения транспорта применена модель движения транспорта Intelligent Driver Model (IDM)[3]. %поправить ссылки
+Для построения транспортной сети и моделирования движения транспорта применена модель движения транспорта Intelligent Driver Model (IDM)\cite{5678993}.
 
-Модель IDM описывает движение транспортного средства (ТС) по сети дорог, учитывая расположение ТС на полосах движения, габаритные размеры ТС, дистанцию между ТС, поведение ТС при смене полосы движения, направление движения полос, среднюю скорость движения и ускорение в заданной полосе, сигналы светофоров, распределение транспортных потоков на перекрёстках[1]. %поправить ссылки
+Модель IDM описывает движение транспортного средства (ТС) по сети дорог, учитывая расположение ТС на полосах движения, габаритные размеры ТС, дистанцию между ТС, поведение ТС при смене полосы движения, направление движения полос, среднюю скорость движения и ускорение в заданной полосе, сигналы светофоров, распределение транспортных потоков на перекрёстках\cite{5678993}.
 
-{\bf{\SetMySubSection} Среда постановки эксперимента для мультипротокольной сети транспортных средств.} Для эффективного управления данными к среде моделирования были выдвинуты следующие требования:
+{\bf{\SetMySubSection} Среда постановки эксперимента для мультипротокольной сети транспортных средств\cite{Instrumental}.} Для эффективного управления данными к среде моделирования были выдвинуты следующие требования:
 
 \begin{itemize}
 
@@ -37,8 +37,8 @@
 
 \begin{itemize}
 
-\item[$-$]Модель интерфейса 802.11s [5]. Реализация допускает применение протокола маршрутизации HWMP в режиме с использованием корневого узла и с построением маршрута передачи по запросу, кроме этого будут использованы протоколы маршрутизации для беспроводных mesh сетей: OLSR, AODV, DSDV.
--Реализации моделей протоколов маршрутизации в беспроводных сетях HWMP, OLSR, AODV, DSDV [2]. %поправить ссылки
+\item[$-$]Модель интерфейса 802.11s\cite{Andreev}. Реализация допускает применение протокола маршрутизации HWMP в режиме с использованием корневого узла и с построением маршрута передачи по запросу, кроме этого будут использованы протоколы маршрутизации для беспроводных mesh сетей: OLSR, AODV, DSDV.
+-Реализации моделей протоколов маршрутизации в беспроводных сетях HWMP, OLSR, AODV, DSDV\cite{Narra:2011:DDV:2151054.2151132}.
 
 \item[$-$]FlowMonitor - модуль сбора и обработки статистики сетевого трафика, предоставляющий разнообразные методы сбора характеристик моделируемых сетевых устройств и каналов связи. 
 
