--- a/cloud.tex
+++ b/cloud.tex
@@ -1,6 +1,6 @@
 {\bf{\SetMySection} Облачно--ориентированная избыточная мультипротокольная сеть.} Основной сложностью обеспечения передачи данных при использовании подвижного mesh 802.11s является динамичное изменение структуры сети, требующее использования дополнительных средств для поддержки маршрутизации сетевого трафика. Изменение доступных маршрутов передачи данных во время передачи сообщения приводит в увеличению времени передачи и, возможно, к потере сообщения. Основными параметрами влияющими на свойства подвижной mesh--сети(802.11s) передачи данных являются скорости движения объектов, территориальное расположение узлов сети, радиус действия передатчиков и время подключения к сети.
  
-Большинство авторов не рассматривают ситуации, в которых отсутствует непрерывная связь со стационарными ретрансляторами, когда непосредственная передача данных невозможна. В тоже время, если рассматривать каждый автомобиль в качестве подвижного ретранслятора, то обмен сообщениями с облачной средой можно обеспечить путём ретрансляции сообщений через них. При наличии набора точек доступа к облачной среде (к облаку) возникает альтернатива выбора точки передачи сообщений в облачную среду. Сегодня, для построения пути доступа к облачной среде используются классические алгоритмы поиска маршрутов mesh сетях [… ], которые предполагают поиск единственного маршрута до единственного заранее известного адресата. В случае облачно--ориентированного сервиса требуется осуществить выбор наиболее перспективного узла из нескольких альтернативных. Для этого необходимо выявить доступные узлы с выходом в облачную среду и оценить перспективность передачи и приёма данных через них. 
+Большинство авторов не рассматривают ситуации, в которых отсутствует непрерывная связь со стационарными ретрансляторами, когда непосредственная передача данных невозможна. В тоже время, если рассматривать каждый автомобиль в качестве подвижного ретранслятора, то обмен сообщениями с облачной средой можно обеспечить путём ретрансляции сообщений через них. При наличии набора точек доступа к облачной среде (к облаку) возникает альтернатива выбора точки передачи сообщений в облачную среду. Сегодня, для построения пути доступа к облачной среде используются классические алгоритмы поиска маршрутов mesh сетях\cite{Narra:2011:DDV:2151054.2151132}, которые предполагают поиск единственного маршрута до единственного заранее известного адресата. В случае облачно--ориентированного сервиса требуется осуществить выбор наиболее перспективного узла из нескольких альтернативных. Для этого необходимо выявить доступные узлы с выходом в облачную среду и оценить перспективность передачи и приёма данных через них. 
 
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
