--- a/telematics.tex
+++ b/telematics.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Телематические технологии доступа к сервисам.} Увеличение объема двунаправленного потока сообщений, обеспечивающего информационную поддержку автомобильного движения формирует всё новые требования к обеспечению информационной поддержки автомобильных сетей.
+{\bf{\SetMySection} Телематические технологии доступа к сервисам.} Увеличение объема двунаправленного потока сообщений, обеспечивающего информационную поддержку автомобильного движения формирует всё новые требования к обеспечению информационной поддержки автомобильных сетей\cite{Road}.
 
 %выкинуть?
 %Отсутствие стабильного покрытия автотрасс сетями 2G/3G/4G, используемыми для обеспечения доступа к внешним облачным сетевым сервисам и службам ЭРА-ГЛОНАС, а также невозможность оборудования каждого автомобиля средствами выхода в локальные и глобальные сети ставит задачу разработки альтернативных методов передачи данных в мобильной сети. Главным требованием к этим методам является обеспечение каждому автомобилю надежного доступа к локальным и глобальным сетям во время движения на любом участке автотрассы.
@@ -7,9 +7,9 @@
 
 \begin{itemize}
 
-\item[$-$] WiMAX [1,2] (802.16de) - скорость передачи данных до 75Мбит/с, удалённость абонента --- до 10 км;
+\item[$-$] WiMAX\cite{Msadaa:2010:CSM:1848649.1849209} (802.16de) - скорость передачи данных до 75Мбит/с, удалённость абонента --- до 10 км;
 
-\item[$-$] LTE --- обеспечивает скорость передачи до 150 Мбит/с, удалённость абонента до 30 км.
+\item[$-$] LTE\cite{LTE} --- обеспечивает скорость передачи до 150 Мбит/с, удалённость абонента до 30 км.
 
 \end{itemize}
 
@@ -35,7 +35,7 @@
 Возможными решениями этих проблем могут стать:
 \begin{itemize}
 
-\item[$-$] разработка универсального реконфигурируемого устройства, адаптирующегося под конкретные каналы и протоколы передачи данных;
+\item[$-$] разработка универсального реконфигурируемого устройства, адаптирующегося под конкретные каналы и протоколы передачи данных; %FIXME ссылка на патент
 
 \item[$-$] стандартизация частотного спектра передачи сигналов; 
 
@@ -48,11 +48,11 @@
 Беспроводные локальные сети (WLAN --- Wireless Local Area Networks) подразделяются по топологии на: 
 \begin{itemize}
 
-\item[$-$] "Точка-точка" --- Peer to Peer или ADHOC;
+\item[$-$] <<Точка-точка>> --- Peer to Peer или ADHOC;
 
-\item[$-$] "Точка-многоточка" --- Infrastructure mode;
+\item[$-$] <<Точка-многоточка>> --- Infrastructure mode;
 
-\item[$-$] "Микросотовая сеть" --- Wireless mesh.
+\item[$-$] <<Микросотовая сеть>> --- Wireless mesh.
 
 \end{itemize}
 
