--- a/intro.tex
+++ b/intro.tex
@@ -1,1 +1,1 @@
-{\bf{\SetMySection}~Введение.} Идея: мобильный абонент хочет работать как и стационарный, чтобы сохранялся доступ ко всем службам и сервисам доступных посредством сетей передачи данных~\cite{Andreev}.
+{\bf{\SetMySection}~Введение.} Идея: мобильный абонент хочет работать как и стационарный, чтобы сохранялся доступ ко всем службам и сервисам доступных посредством сетей передачи данных~\cite{Msadaa:2010:CSM:1848649.1849209}.
