--- a/authors.tex
+++ b/authors.tex
@@ -1,13 +1,28 @@
 \bigskip
 
-\noindent{\tolerance 300 \footnotesize
-\textbf{Глазунов Вадим Валерьевич}~—  аспирант кафедры <<Телематика (при ЦНИИ РТК)>> ИПММ СПбГПУ. neweagle@gmail.com; СПбГПУ, Политехническая ул., д.~29, г.~Санкт-Петербург, 195251, Россия; р.т. +7(812)552-65-21. Научный руководитель~--- Курочкин~М.\,А.
+{\footnotesize
+
+\noindent {\bf Глазунов Вадим Валерьевич}~--—  аспирант кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). neweagle@gmail.com; СПбГПУ, Политехническая ул., д.~29, г.~Санкт-Петербург, 195251, Россия; р.т. +7(812)552-65-21. Научный руководитель~--- Курочкин~М.\,А.
 \vskip 1mm
 \noindent\textbf{Glazunov V. Vadim}~—  of . neweagle@gmail.com; SPbSPU , kiy pr., 29., St. Petersburg, 195251, Russia; office phone +7(812)552-6521, Scientific advisor~--- Kurochkin~M/\,A.
-\vskip 1mm
-\noindent\textbf{Курочкин Леноид Михайлович} — к.т.н., доцент кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики Санкт-Петербургского государственного Политехнического университета. Область научных интересов: . Число научных публикаций — . ALT@iias.spb.su, www.tulupyev.spb.ru; СПИИРАН, 14-я линия В.О., д. 39, г. Санкт-Петербург, 195251, РФ; р.т. +7(812)552-65-21.
-\vskip 1mm
-\noindent\textbf{Alexander L. Tulupyev} — PhD in Computer Science, Associate Professor; acting Head of Theoretical and Interdisciplinary Computer Science Laboratory, SPIIRAS, Associate Professor of Computer Science Department, SPbSU. Research area: uncertain data and knowledge representation and processing, mathematics and computer science applications in socio-cultural studies, biostatistics, simulation, and mathematical modeling applications in epidemiology, data intensive software systems development technology. Number of publications — 160. ALT@iias.spb.su, www.tulupyev.spb.ru; SPIIRAS, 14-th line V.O., 39, St. Petersburg, 199178, Russia; office phone +7(812)328-3337, fax +7(812)328-4450.\vskip 1mm}
 
+\vskip 1mm
 
- {\footnotesize \noindent\textbf{Поддержка исследований.} Работа выполнена при финансовой поддержке РФФИ, проект № 13-07-12106 офи\_м.}
+\noindent {\bf Курочкин Леонид Михайлович}~--- к.т.н.; доцент кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). Область научных интересов: автоматизированные системы управления, имитационное моделирование, компьютерные сети. Число научных публикаций --- 20. kurl@ya.ru; СПбГПУ, Политехническая, д. 29, г. Санкт-Петербург, 195251, РФ; р.т. +7(812)552-65-21. 
+
+\vskip 1mm
+
+\noindent {\bf Leonid M. Kurochkin)~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Automatic Control Systems, Simulation Modeling, Computer Networks. Number of publications --— 20. kurl@ya.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
+
+\vskip 1mm
+
+\noindent {\bf Попов Сергей Геннадьевич}~--- к.т.н.; доцент кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). Область научных интересов:  теория баз данных, системы управления базами данных, управление проектами, проектирование приложений,  компьютерные сети. Число научных публикаций --- 42. popovserge@spbstu.ru; СПбГПУ, Политехническая, д. 29, г. Санкт-Петербург, 195251, РФ; р.т. +7(812)552-65-21. 
+
+\vskip 1mm
+
+\noindent {\bf Serge G. Popov)~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Database Theory, Database Management System, Project Management, Application Development, Computer Networks. Number of publications --— 42. popovserge@spbstu.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
+}
+
+\vskip 1mm
+
+\noindent {\footnotesize  {\bf Поддержка исследований.} Работа выполнена при финансовой поддержке РФФИ, проект № 13-07-12106 офи\_м.}
