Ссылка на патент

--- a/biblio.tex
+++ b/biblio.tex
@@ -33,3 +33,6 @@
 
 
 %[11]	Проблемы построения интеллектуальной транспортной сети Сборник материалов международной научно-методической конференции "Высокие интеллектуальные технологии и инновации в национальных исследовательских университетах". - СПб.:Изд-во СПбГПУ, 2013, Том 1, стр. 32-34	Курочкин М. А., Попов С. Г.
+
+%[12] Seong-Youp Suh, Salih Yarga, A. S. K. (2010). Multiprotocol antenna structure and method for synthesizing a multiprotocol antenna pattern. US Patent PCT/US2010/042396.
+
