--- a/article_IP.tex
+++ b/article_IP.tex
@@ -1,4 +1,4 @@
-\documentclass[a5paper, 10pt, oneside, draft]{article}
+\documentclass[a5paper,10pt,oneside, final]{article}
 
 \usepackage[cp1251]{inputenc}
 
