--- a/authors.tex
+++ b/authors.tex
@@ -2,9 +2,9 @@
 
 {\footnotesize
 
-\noindent {\bf Глазунов Вадим Валерьевич}~--—  аспирант кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). neweagle@gmail.com; СПбГПУ, Политехническая ул., д.~29, г.~Санкт-Петербург, 195251, Россия; р.т. +7(812)552-65-21. Научный руководитель~--- Курочкин~М.\,А.
+\noindent {\bf Глазунов Вадим Валерьевич}~--— аспирант кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). neweagle@gmail.com; СПбГПУ, Политехническая ул., д.~29, г.~Санкт-Петербург, 195251, Россия; р.т. +7(812)552-65-21. Научный руководитель~--- Курочкин~М.\,А.
 \vskip 1mm
-\noindent\textbf{Glazunov V. Vadim}~—  of . neweagle@gmail.com; SPbSPU , kiy pr., 29., St. Petersburg, 195251, Russia; office phone +7(812)552-6521, Scientific advisor~--- Kurochkin~M/\,A.
+\noindent\textbf{Glazunov V. Vadim}~—  PhD student of Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. neweagle@gmail.com; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-6521, Scientific advisor~--- Kurochkin~M/\,A.
 
 \vskip 1mm
 
