Ссылка на патент

--- a/telematics.tex
+++ b/telematics.tex
@@ -35,7 +35,7 @@
 Возможными решениями этих проблем могут стать:
 \begin{itemize}
 
-\item[$-$] разработка универсального реконфигурируемого устройства, адаптирующегося под конкретные каналы и протоколы передачи данных; %FIXME ссылка на патент
+\item[$-$] разработка универсального реконфигурируемого устройства, адаптирующегося под конкретные каналы и протоколы передачи данных\cite{Seong-Youp};
 
 \item[$-$] стандартизация частотного спектра передачи сигналов; 
 
