Новая ссылка на литературу

--- a/articleIP.bib
+++ b/articleIP.bib
@@ -93,3 +93,10 @@ ISSN={0891-7736},}
        year = {2013},
    location = {Reykjavic, Iceland}
 }
+
+@misc{Seong-Youp,
+  author = {Seong-Youp Suh, Salih Yarga, Anand S. Konanur},
+  title = {Multiprotocol antenna structure and method for synthesizing a multiprotocol antenna pattern},
+  howpublished = {US Patent PCT/US2010/042396.},
+  year = {2010},
+}
