Немного текста в нужных местах

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Заключение.} Здесь должен быть текст.
+{\bf{\SetMySection} Заключение.} Современные тенденции  расширения спектра информационных услуг формируют новые задачи позволяющие улучшить качество доступа к подвижним сетям передачи данных. В результате:
 
 \begin{itemize}
 
@@ -12,7 +12,6 @@
 
 \end{itemize}
 
-В рамках продолжения исследований планируется провести детальное исследование временных характеристик, проанализировать возможность построения оптимальных маршрутов пересылки сообщений между узлом сети и облачной средой, на основании исследований разработать универсальный протокол маршрутизации для мультипротокольной облачно-ориентированной MESH сети автомобилей.
 
 Результаты проведённой работы:
 
@@ -24,6 +23,8 @@
 
 \item[$-$] технология моделирования высоконадежных сетей с произвольной комбинацией протоколов: 802.11s, 802.11p, 802.11abg, LTE; 
 
-\item[$-$] разработана среда моделирования mesh на базе ns-3. Полученная среда моделирования позволяет произвести оценки работы сетевых узлов (абонентов) в экстремальных условиях.
+\item[$-$] разработана среда моделирования mesh на базе ns-3. Полученная среда моделирования позволяет произвести оценки работы сетевых узлов (абонентов).
 
 \end{itemize}
+
+%В рамках продолжения исследований планируется провести детальное исследование временных характеристик, проанализировать возможность построения оптимальных маршрутов пересылки сообщений между узлом сети и облачной средой, на основании исследований разработать универсальный протокол маршрутизации для мультипротокольной облачно-ориентированной MESH сети автомобилей.
