--- a/biblio.tex
+++ b/biblio.tex
@@ -1,5 +1,6 @@
 {\bf{\SetMySection} Литература.}
-\bibliography{articleIP}{}
+
+\bibliography{article_IP}{}
 
 %!!! Msadaa:2010:CSM:1848649.1849209
 %%[1]A Comparative Study between 802.11p and Mobile WiMAX-based V2I Communication Networks Date of Conference: 27-29 July 2010. Msadaa, I.C.
@@ -36,4 +37,3 @@
 
 %!!! Seong-Youp
 %[12] Seong-Youp Suh, Salih Yarga, A. S. K. (2010). Multiprotocol antenna structure and method for synthesizing a multiprotocol antenna pattern. US Patent PCT/US2010/042396.
-
