мелкие правки ресёча и конклюжена

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Заключение.} Современные тенденции  расширения спектра информационных услуг формируют новые задачи позволяющие улучшить качество доступа к подвижним сетям передачи данных. В результате:
+{\bf{\SetMySection} Заключение.} Современные тенденции  расширения спектра информационных услуг формируют новые задачи позволяющие улучшить качество доступа к подвижным сетям передачи данных. В результате:
 
 \begin{itemize}
 
