--- a/research.tex
+++ b/research.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Исследование (?).} На основе подготовленной инструментальной среды была проведена серия экспериментов по передаче коротких сообщений между абонентами mesh-сети, позволяющая выявить насколько устойчивы сети на высокодинамичных участках дороги.
+{\bf{\SetMySection} Исследование (?).} На основе разработанной инструментальной среды была проведена серия экспериментов по передаче коротких сообщений между абонентами mesh-сети, позволяющая выявить насколько устойчивы сети передачи данных на высокодинамичных участках дороги.
 
 {\bf{\SetMySubSection} Исходные данные для экспериментов.} Для проведения экспериментов определена область допустимых значений изменяемых параметров:
 
