--- a/article_IP.bib
+++ b/article_IP.bib
@@ -1,4 +1,6 @@
-@inproceedings{Msadaa:2010:CSM:1848649.1849209,
+\begin{thebibliography}{}
+
+inproceedings{Msadaa:2010:CSM:1848649.1849209,
  author = {Msadaa, Ikbal Chammakhi and Cataldi, Pasquale and Filali, Fethi},
  title = {A Comparative Study between 802.11p and Mobile WiMAX-based V2I Communication Networks},
  booktitle = {Proceedings of the 2010 Fourth International Conference on Next Generation Mobile Applications, Services and Technologies},
@@ -93,7 +95,4 @@ ISSN={0891-7736},}
        year = {2013},
    location = {Reykjavic, Iceland}
 }
-
-
-
-
+\end{thebibliography}
