--- a/article_IP.tex
+++ b/article_IP.tex
@@ -6,6 +6,11 @@
 
 \usepackage[T2A]{fontenc}
 
+% для правильного переноса url три пакета
+\usepackage{hyperref}
+\usepackage[hyphenbreaks]{breakurl}
+\usepackage{breakurl}
+
 % кириллица из другого пакета
 % \usepackage{pscyr}
 
