Файл компиляции библиографии

--- a/article_IP.bib
+++ b/article_IP.bib
@@ -1,4 +1,4 @@
-inproceedings{Msadaa:2010:CSM:1848649.1849209,
+@inproceedings{Msadaa:2010:CSM:1848649.1849209,
  author = {Msadaa, Ikbal Chammakhi and Cataldi, Pasquale and Filali, Fethi},
  title = {A Comparative Study between 802.11p and Mobile WiMAX-based V2I Communication Networks},
  booktitle = {Proceedings of the 2010 Fourth International Conference on Next Generation Mobile Applications, Services and Technologies},
@@ -7,13 +7,13 @@ inproceedings{Msadaa:2010:CSM:1848649.1849209,
  isbn = {978-0-7695-4121-1},
  pages = {186--191},
  numpages = {6},
- url = {http://dx.doi.org/10.1109/NGMAST.2010.45},
+ url = {\url{http://dx.doi.org/10.1109/NGMAST.2010.45}},
  doi = {10.1109/NGMAST.2010.45},
  acmid = {1849209},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
  keywords = {ITS, IEEE 802.11p, 5.9 GHz technology, IEEE 802.16e, mobile WiMAX, V2I, simulation},
-} 
+}
 
 @INPROCEEDINGS{5678993,
 author={Arbabi, H. and Weigle, M.C.},
@@ -70,6 +70,13 @@ ISSN={0891-7736},}
   year = {2012},
 }
 
+@misc{Seong-Youp,
+  author = {Seong-Youp Suh, Salih Yarga, Anand S. Konanur},
+  title = {Multiprotocol antenna structure and method for synthesizing a multiprotocol antenna pattern},
+  howpublished = {US Patent PCT/US2010/042396.},
+  year = {2010},
+}
+
 @INPROCEEDINGS{Instrumental,
      author = {Glazunov Vadim, Kurochkin Leonid,  Kurochkin Mihail and Popov Sergey},
       title = {Instrumental Environment of Multi-Protocol Cloud-Oriented Vehicular MESH Network},
@@ -79,15 +86,7 @@ ISSN={0891-7736},}
 }
 
 @INPROCEEDINGS{Road,
-     author = {Glazunov Vadim, Kurochkin Leonid, Kurochkin Mihail, Popov Sergey and Timofeev Dimitri},
-      title = {Road Traffic Efficiency and Safety Improvements Trends},
-  booktitle = {10th International Conference on Informatics in Control, Automation and Robotics (ICINCO)},
-       year = {2013},
-   location = {Reykjavic, Iceland}
-}
-
-@INPROCEEDINGS{,
-     author = {Glazunov Vadim, Kurochkin Leonid, Kurochkin Mihail, Popov Sergey and Timofeev Dimitri},
+     author = {Glazunov Vadim, Kurochkin Leonid, Kurochkin Mihail and Popov Sergey},
       title = {Road Traffic Efficiency and Safety Improvements Trends},
   booktitle = {10th International Conference on Informatics in Control, Automation and Robotics (ICINCO)},
        year = {2013},
