--- a/article_IP.tex
+++ b/article_IP.tex
@@ -11,6 +11,9 @@
 \usepackage[hyphenbreaks]{breakurl}
 \usepackage{breakurl}
 
+%для цитат
+%\usepackage{cite}
+
 % кириллица из другого пакета
 % \usepackage{pscyr}
 
