--- a/biblio.tex
+++ b/biblio.tex
@@ -1,6 +1,7 @@
 {\bf{\SetMySection} Литература.}
 
 \bibliography{article_IP}{}
+\bibliographystyle{plain}
 
 %!!! Msadaa:2010:CSM:1848649.1849209
 %%[1]A Comparative Study between 802.11p and Mobile WiMAX-based V2I Communication Networks Date of Conference: 27-29 July 2010. Msadaa, I.C.
