Добавил компилированый файл bib

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -1,4 +1,4 @@
-\documentclass[a5paper,10pt,oneside, final]{article}
+\documentclass[a5paper,10pt,oneside, draft]{article}
 
 \usepackage[cp1251]{inputenc}
 
@@ -12,10 +12,10 @@
 \usepackage{breakurl}
 
 %для цитат
-%\usepackage{cite}
+\usepackage{cite}
 
 % кириллица из другого пакета
-% \usepackage{pscyr}
+%\usepackage{pscyr}
 
 %графика
 \usepackage{epsfig}
