Все изменения с библиографией заливаю в репозиторий.

--- a/implementation.tex
+++ b/implementation.tex
@@ -31,7 +31,7 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Ќа рисунке ~\ref{ref:fig:architecture} приведена разработанна€ структура среды модели мультипротокольной сети.
+Ќа рисунке ~\ref{fig:architecture} приведена разработанна€ структура среды модели мультипротокольной сети.
 
 –еализованна€ модель содержит следующие модули ns-3: 
 
