--- a/summary.tex
+++ b/summary.tex
@@ -8,7 +8,26 @@
 
 {\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
 
-{\small Текст}
+
+Эксплуатация современного автомобиля тесно связана с использованием разобщённых информационных ресурсов, предоставляющих водителю и пассажирам разнообразные услуги и сервисы. 
+
+Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образует интеллектуальную транспортную сеть. Целью создания такой сети являются повышение безопасности и комфорта участников дорожного движения.
+
+Обмен информационными сообщениями между автомобилем и облачной средой осуществляется через выделенный канал связи. Посредством этого обмена, облачная среда осуществляет сбор статистических данных, как о конкретных автомобилях, так и о дорожной обстановке, конечные пользователи получают доступ к службам экстренной помощи, информационным, справочным и развлекательным ресурсам.
+
+Проблемой доступа к сервисам облачной среды может стать отсутствие непрерывно существующего выделенного беспроводного канала связи, что приводит к отказу обслуживания или необходимости использования альтернативных каналов связи. 
+
+Канал передачи данных может быть организован при помощи автомобильных телематических устройств или персональных устройств пользователя, таких как смартфоны, лэптопы и общедоступные сотовые сети передачи данных.
+
+Одним из решений, позволяющих улучшить качество доступа к сервисам облачной среды, становится применение mesh сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.
+
+Особенностью mesh сетей является динамически изменяемая топология и отсутствие априорной информации о расположении точек доступа к облачной среде, что определяет возможное наличие множества различных путей доставки информационных сообщений.
+
+Основным средством исследования поведения mesh сетей является имитационное моделирование, позволяющее выполнять различные сценарии поведения mesh сетей, не прибегая к реализации натурного эксперимента. В рамках данной работы была разработана модель автомобильной mesh сети, реализованной на основе модели движения транспорта IDM средствами дискретно-событийного симулятора компьютерных сетей ns--3.
+
+
+
+Результатом представленной работы стала серия экспериментов, позволяющих оценить поведения автомобильных mesh сетей в зависимости от свойств сетевого трафика, характеристик дорожной сети и особенностей организации дорожного движения.
 
 \newpage
 
