анотация и ключевые слова

--- a/summary.tex
+++ b/summary.tex
@@ -11,7 +11,7 @@
 
 Ёксплуатаци€ современного автомобил€ тесно св€зана с использованием разобщЄнных информационных ресурсов, предоставл€ющих водителю и пассажирам разнообразные услуги и сервисы. 
 
-—овокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образует интеллектуальную транспортную сеть. ÷елью создани€ такой сети €вл€ютс€ повышение безопасности и комфорта участников дорожного движени€.
+—овокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть. ÷елью создани€ такой сети €вл€ютс€ повышение безопасности и комфорта участников дорожного движени€.
 
 ќбмен информационными сообщени€ми между автомобилем и облачной средой осуществл€етс€ через выделенный канал св€зи. ѕосредством этого обмена, облачна€ среда осуществл€ет сбор статистических данных, как о конкретных автомобил€х, так и о дорожной обстановке, конечные пользователи получают доступ к службам экстренной помощи, информационным, справочным и развлекательным ресурсам.
 
