--- a/article_IP.tex
+++ b/article_IP.tex
@@ -107,9 +107,9 @@
 
 \noindent {\it Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} {\bf Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}\\
 {\bf Аннотация.} 
-Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк.\\
+Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть, позволяющую повысить безопасность и комфорт передвижения абонентов сети. Особенностью автомобильных сетей передачи данных является динамически изменяемая топология, что определяет возможное наличие множества различных путей доставки информационных сообщений. Проблемой обеспечения информационного обмена может стать отсутствие непрерывно существующего выделенного беспроводного канала связи. Одним из решений, позволяющих улучшить качество передачи данных, становится реализация сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.\\
 {\bf Ключевые слова:}
-автомобильные сервисы, автомобильные сети, протоколы передачи данных, моделирование, ns--3.
+автомобильные сервисы, автомобильные сети, mesh, 802.11s, LTE, IDM, облачные сервисы, мультипротокольный узел, протоколы передачи данных, протоколы маршрутизации, имитационное моделирование, ns--3.
 
 \vskip 2mm
 
