--- a/authors.tex
+++ b/authors.tex
@@ -12,15 +12,21 @@
 
 \vskip 1mm
 
-\noindent {\bf Leonid M. Kurochkin)~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Automatic Control Systems, Simulation Modeling, Computer Networks. Number of publications --— 20. kurl@ya.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
+\noindent {\bf Leonid M. Kurochkin}~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Automated Control Systems, Simulation Modeling, Computer Networks. Number of publications --— 20. kurl@ya.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
 
 \vskip 1mm
 
+\noindent {\bf Курочкин Михайл Александрович}~--- к.т.н.; профессор кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). Область научных интересов: машинная графика, человеко-машинный интерфейс, компьютерное моделирование, компьютерные сети. Число научных публикаций --- 130. kurochkin.m@gmail.com; СПбГПУ, Политехническая, д. 29, г. Санкт-Петербург, 195251, РФ; р.т. +7(812)552-65-21. 
+
+\vskip 1mm
+
+\noindent {\bf Michail A. Kurochkin}~--- PhD in Technical Science, Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Computer Graphics, Hhuman Machine Interface, 
+Computer Simulation, Computer Networks. Number of publications --— 130. kurl@ya.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
 \noindent {\bf Попов Сергей Геннадьевич}~--- к.т.н.; доцент кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). Область научных интересов:  теория баз данных, системы управления базами данных, управление проектами, проектирование приложений,  компьютерные сети. Число научных публикаций --- 42. popovserge@spbstu.ru; СПбГПУ, Политехническая, д. 29, г. Санкт-Петербург, 195251, РФ; р.т. +7(812)552-65-21. 
 
 \vskip 1mm
 
-\noindent {\bf Serge G. Popov)~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Database Theory, Database Management System, Project Management, Application Development, Computer Networks. Number of publications --— 42. popovserge@spbstu.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
+\noindent {\bf Serge G. Popov}~--- PhD in Technical Science, Associate Professor of Telematics Science Department, Institute of Applied Mathematics and Mechanics, SPbSPU. Research area: Database Theory, Database Management System, Project Management, Application Development, Computer Networks. Number of publications --— 42. popovserge@spbstu.ru; SPbSPU, Polytechnicheskaya st., 29, St. Petersburg, 195251, Russia; office phone +7(812)552-65-21.
 }
 
 \vskip 1mm
