выкинуты лишни слова "может" из разделё Лёни и Вадика, Сокращён список в разделе сервисы, выкинута картинка с узлом базовым. мелкие стилисические правки

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -1,4 +1,4 @@
-\documentclass[a5paper,10pt,oneside, draft]{article}
+\documentclass[a5paper,10pt,oneside]{article}
 
 \usepackage[cp1251]{inputenc}
 
@@ -107,7 +107,7 @@
 
 \noindent {\it Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} {\bf Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}\\
 {\bf Аннотация.} 
-Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть, позволяющую повысить безопасность и комфорт передвижения абонентов сети. Особенностью автомобильных сетей передачи данных является динамически изменяемая топология, что определяет возможное наличие множества различных путей доставки информационных сообщений. Проблемой обеспечения информационного обмена может стать отсутствие непрерывно существующего выделенного беспроводного канала связи. Одним из решений, позволяющих улучшить качество передачи данных, становится реализация сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.\\
+Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть, позволяющую повысить безопасность и комфорт передвижения абонентов сети. Особенностью автомобильных сетей передачи данных является динамически изменяемая топология, что определяет наличие множества различных путей доставки информационных сообщений. Проблемой обеспечения информационного обмена может стать отсутствие непрерывно существующего выделенного беспроводного канала связи. Решением, позволяющим улучшить качество передачи данных, становится реализация сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.\\
 {\bf Ключевые слова:}
 автомобильные сервисы, автомобильные сети, mesh, 802.11s, LTE, IDM, облачные сервисы, мультипротокольный узел, протоколы передачи данных, протоколы маршрутизации, имитационное моделирование, ns--3.
 
