--- a/implementation.tex
+++ b/implementation.tex
@@ -78,21 +78,21 @@
 
 \end{enumerate}
 
-Для проведения эксперимента был создан узел позволяющий осуществлять доставку пакетов между мультипротокольными узлами mesh-сети для сетей 802.11s и LTE.
+Для проведения эксперимента была создана модель узла позволяющая осуществлять доставку пакетов между мультипротокольными узлами mesh-сети для сетей 802.11s и LTE.
 Такая схема взаимодействия потребовала, дополнительно создания виртуального интерфейса, через который бы происходила маршрутизация между сетями.
-Базовая реализация взаимодействия показана на рисунке~\ref{fig:basic_realisation}.
+%Базовая реализация взаимодействия показана на рисунке~\ref{fig:basic_realisation}.
 
 Модель узла реализующая функцию маршрутизации сообщений между сетями передачи данных 802.11s и LTE показана на рисунке~\ref{fig:multiprotocol_realisation}.
 Реализация мультипротокольного узла выполнена на основе виртуального узла точка-точка, обеспечивающего промежуточное взаимодействие между интерфейсами 802.11s и LTE.
 
-\begin{figure}[!ht]
+%\begin{figure}[!ht]
 % \vspace{-0.2cm}
- \centering{
- \epsfig{file = basic_realisation, width = 6cm}
- \caption{Базовая реализация шлюза 802.11s-802.11p.}
- \label{fig:basic_realisation}}
+% \centering{
+% \epsfig{file = basic_realisation, width = 6cm}
+% \caption{Базовая реализация шлюза 802.11s-802.11p.}
+% \label{fig:basic_realisation}}
 % \vspace{-0.1cm}
-\end{figure}
+%\end{figure}
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
