--- a/research.tex
+++ b/research.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Исследование (?).} На основе разработанной инструментальной среды была проведена серия экспериментов по передаче коротких сообщений между абонентами mesh-сети, позволяющая выявить насколько устойчивы сети передачи данных на высокодинамичных участках дороги.
+{\bf{\SetMySection} Исследование.} На основе разработанной инструментальной среды была проведена серия экспериментов по передаче коротких сообщений между абонентами mesh-сети, позволяющая выявить насколько устойчивы сети передачи данных на высокодинамичных участках дорожной сети.
 
 {\bf{\SetMySubSection} Исходные данные для экспериментов.} Для проведения экспериментов определена область допустимых значений изменяемых параметров:
 
@@ -24,7 +24,7 @@
 
 Заданная такими границами область значений параметров моделирования позволяет исследовать наиболее динамичные периоды существования mesh сети (короткое время жизни сети, широкий диапазон интенсивности сетевого трафика, высокая интенсивность перераспределения маршрутов).
 
-{\bf{\SetMySubSection} Анализ результатов исследования.} Здесь нужент текст.
+{\bf{\SetMySubSection} Анализ результатов исследования.}  В рамках данной работы, посредством использования созданной модели автомобильной mesh сети, реализованной на основе модели движения транспорта IDM и дискретно-событийного симулятора компьютерных сетей ns--3 была проведена серия экспериментов, позволяющих проанализировать свойства исследуемых сетей.
 
 {\bf{\SetMySubSubSection} Оценка отношений расчётной и фактической скоростей передачи сообщений.} Одной из основных причин появления отличий между реальной и рассчётной скоростями передачи данных является использование служебного трафика, в частности, необходимого для обеспечения работы протоколов маршрутизации, что особенно актуально в мобильных mesh сетях для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были рассмотрены следующие протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рисунке~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к реальной.
  
@@ -100,7 +100,7 @@
 
 Для 8 узлов (1 автомобиль на 100 м. проезжей части), при этих параметрах, среднее время доставки сообщения от абонента в облачную среду составило 70,41 мс.; для 16 узлов 4,04 мс. Уменьшение времени доставки сообщений в сети с 16-ю узлами (2 автомобиля на 100 м. проезжей части) связано возможностью построения дополнительных маршрутов передачи данных.
 
-В рамках данного эксперемента проводились исследования возможности доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s. В первом эксперименте определялся процент потерь сообщений от максимальной скорости движения автомобилей при разной плотности потока автомобилей оснащённых интерфейсом 802.11s.(рис.9).
+В рамках данного эксперимента проводились исследования возможности доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s. В первом эксперименте определялся процент потерь сообщений от максимальной скорости движения автомобилей при разной плотности потока автомобилей оснащённых интерфейсом 802.11s.(рис.9).
 
 \ref{fig:alarm_densety}.
  
@@ -113,7 +113,7 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Зависиость на рис~\ref{fig:alarm_densety} показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы, практически все переданные сообщения не доходят до адресата. Процент потерь сотавляет 78-92\%. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh (802.11s), что позволит использовать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащенных передатчиками 802.11s, является использование альтернативной технологии передачи - DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
+Зависимость на рис~\ref{fig:alarm_densety} показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы, практически все переданные сообщения не доходят до адресата. Процент потерь составляет 78-92\%. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh (802.11s), что позволит использовать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащённых передатчиками 802.11s, является использование альтернативной технологии передачи - DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
 
 Во втором эксперименте проводилось исследование возможности доставки сообщения от аварийного автомобиля, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и LTE на прямом участке 4-х полосного шоссе протяжённостью 800 метров (рис.10). 
 
