--- a/telematics.tex
+++ b/telematics.tex
@@ -56,7 +56,7 @@
 
 \end{itemize}
 
-Автомобиль может содержать устройства для подключения к локальным сетям используя различные технологии, для формирования подключения к различным топологиям и получения доступа к соответствующим сетевым сервисам и данным.
+Автомобиль (узел сети) содержит различные устройства для подключения к локальным сетям. Подключение осуществляется, используя различные технологии, для получения доступа к необходимым сетевым сервисам и данным.
 
 %выкинуть?
 %Первая проблема решается использованием в аппаратуре сетевого оборудования общего набора сетевых стандартов и протоколов передачи данных. Совместимость стандартов обеспечивает устойчивую работу сетей на физическом, канальном и сетевом уровнях модели OSI. Другими словами производители оборудования разрабатывают и используют универсальные реконфигурируемые интерфейсы для доступа как к глобальным и локальным беспроводным сетям.
