--- a/summary.tex
+++ b/summary.tex
@@ -15,11 +15,11 @@
 
 Обмен информационными сообщениями между автомобилем и облачной средой осуществляется через выделенный канал связи. Посредством этого обмена, облачная среда осуществляет сбор статистических данных, как о конкретных автомобилях, так и о дорожной обстановке, конечные пользователи получают доступ к службам экстренной помощи, информационным, справочным и развлекательным ресурсам.
 
-Проблемой доступа к сервисам облачной среды может стать отсутствие непрерывно существующего выделенного беспроводного канала связи, что приводит к отказу обслуживания или необходимости использования альтернативных каналов связи. 
+Проблемой доступа к сервисам облачной среды становится отсутствие непрерывно существующего выделенного беспроводного канала связи, что приводит к отказу обслуживания или необходимости использования альтернативных каналов связи. 
 
-Канал передачи данных может быть организован при помощи автомобильных телематических устройств или персональных устройств пользователя, таких как смартфоны, лэптопы и общедоступные сотовые сети передачи данных.
+Канал передачи данных организуется при помощи автомобильных телематических устройств или персональных устройств пользователя, таких как смартфоны, лэптопы и общедоступные сотовые сети передачи данных.
 
-Одним из решений, позволяющих улучшить качество доступа к сервисам облачной среды, становится применение mesh сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.
+Решением, позволяющим улучшить качество доступа к сервисам облачной среды, является применение mesh сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.
 
 Особенностью mesh сетей является динамически изменяемая топология и отсутствие априорной информации о расположении точек доступа к облачной среде, что определяет возможное наличие множества различных путей доставки информационных сообщений.
 
